BE/kubernetes/alert-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
  namespace: msa-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      containers:
        - name: alert-service
          image: hongbeom1/alert-service:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: alert-service
  namespace: msa-apps
spec:
  selector:
    app: alert-service
  ports:
    - port: 8084
      targetPort: 8084
  type: ClusterIP
