BE/kubernetes/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: msa-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: hongbeom1/${IMAGE_NAME}:${TAG}
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: msa-apps
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
