BE/kubernetes/config-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  namespace: msa-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - name: config-service
          image: hongbeom1/${IMAGE_NAME}:${TAG}
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: msa-apps
spec:
  selector:
    app: config-service
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
