BE/kubernetes/health-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-service
  namespace: msa-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-service
  template:
    metadata:
      labels:
        app: health-service
    spec:
      containers:
        - name: health-service
          image: hongbeom1/health-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: health-service
  namespace: msa-apps
spec:
  selector:
    app: health-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
