BE/kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: msa-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: hongbeom1/user-service:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: msa-apps
spec:
  selector:
    app: user-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
